# attestation-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
common-test-data/: rp-policy-permissive.rego  (+1 more)
nv-attestation-cli/: CMakeLists.txt  attest.cpp  attest.h  config.toml  main.cpp  test.env  version_config.h.in
nv-attestation-cli/src/: attest.cpp  attest.h  collect_evidence.cpp  collect_evidence.h  logging.cpp  logging.h  main.cpp  nvattest_options.h  nvattest_types.h  utils.cpp  utils.h  version.cpp  version.h
nv-attestation-cli/tests/: CMakeLists.txt  attest_tests.cpp  cli_tests.cpp  collect_evidence_tests.cpp  environment.h  gpu_faulty_driver_rim_tests.cpp  main.cpp  measurement_mismatch_tests.cpp  test_utils.h  trust_outpost_tests.cpp
nv-attestation-sdk-cpp/: .clang-tidy  .gitignore  CMakeLists.txt  CPackConfig.cmake.in  Doxyfile  test.env
nv-attestation-sdk-cpp/cmake/: Config.cmake.in  FindCURL.cmake  FindLibXml2.cmake  FindNscq.cmake  FindNvml.cmake  FindOpenSSL.cmake  Findxmlsec.cmake  nvat.pc.in  nvat_fetch_gtest.cmake  nvat_locate_installed.cmake
nv-attestation-sdk-cpp/examples/: CMakeLists.txt
nv-attestation-sdk-cpp/examples/attest/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/attest-minimal/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/attest_local/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/attest_policy_custom/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/attest_policy_none/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/attest_remote/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/collect-gpu-evidence/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/common/: CMakeLists.txt  example_utils.c  example_utils.h
nv-attestation-sdk-cpp/examples/custom-logger/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/json-gpu-evidence/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/examples/parallel-verification/: CMakeLists.txt  main.c
nv-attestation-sdk-cpp/include/: nvat.h.in
nv-attestation-sdk-cpp/include/nv_attestation/: attestation.h  claims.h  claims_evaluator.h  error.h  init.h  log.h  nv_cache.h  nv_http.h  nv_jwt.h  nv_ocsp.h  nv_types.h  nv_x509.h  nvat_private.hpp  rim.h  utils.h  verify.h
nv-attestation-sdk-cpp/include/nv_attestation/gpu/: claims.h  corelib_client.h  evidence.h  nvml_client.h  verify.h
nv-attestation-sdk-cpp/include/nv_attestation/spdm/: spdm_measurement_records.hpp  spdm_opaque_data_parser.hpp  spdm_req.hpp  spdm_resp.hpp  utils.h
nv-attestation-sdk-cpp/include/nv_attestation/switch/: claims.h  evidence.h  nscq_attestation.h  nscq_attestation_path.h  nscq_client.h  verify.h
nv-attestation-sdk-cpp/integration-tests/: CMakeLists.txt  gpu_evidence_test.cpp  main.cpp  switch_evidence_test.cpp
nv-attestation-sdk-cpp/scripts/: activate.sh  build.sh  clean.sh  dev-env.sh  generate_docs.sh  lint.sh  run-examples.sh  test.sh
nv-attestation-sdk-cpp/src/: attestation.cpp  claims.cpp  claims_evaluator.cpp  error.cpp  init.cpp  log.cpp  nv_cache.cpp  nv_http.cpp  nv_jwt.cpp  nv_ocsp.cpp  nv_x509.cpp  nvat.cpp  rim.cpp  utils.cpp  verify.cpp
nv-attestation-sdk-cpp/src/gpu/: claims.cpp  corelib_client.cpp  evidence.cpp  nvml_client.cpp  verify.cpp
nv-attestation-sdk-cpp/src/gpu/spdm/: gpu_opaque_data_parser.cpp
nv-attestation-sdk-cpp/src/internal/: certs.h  debug.hpp
nv-attestation-sdk-cpp/src/internal/rego_engine/: rego_engine.h  regorus.hpp
nv-attestation-sdk-cpp/src/rego_engine/: regorus_rego_engine.cpp
nv-attestation-sdk-cpp/src/spdm/: spdm_measurement_records.cpp  spdm_opaque_data_parser.cpp  spdm_req.cpp  spdm_resp.cpp
nv-attestation-sdk-cpp/src/switch/: claims.cpp  evidence.cpp  nscq_client.cpp  verify.cpp
nv-attestation-sdk-cpp/src/switch/spdm/: switch_opaque_data_parser.cpp
nv-attestation-sdk-cpp/unit-tests/: CMakeLists.txt  attestation_test.cpp  claims_evaluator_test.cpp  claims_test.cpp  debug_test.cpp  environment.h  error_test.cpp  main.cpp  nv_cache_test.cpp  nv_http_test.cpp  nv_x509_test.cpp  rim_test.cpp  spdm_test_utils.cpp  switch_test_utils.cpp  test_utils.cpp  utils_test.cpp
nv-attestation-sdk-cpp/unit-tests/gpu/: claims_test.cpp  evidence_test.cpp  verifier_test.cpp
nv-attestation-sdk-cpp/unit-tests/gpu/spdm/: spdm_req_test.cpp  spdm_resp_test.cpp
nv-attestation-sdk-cpp/unit-tests/include/: environment.h  spdm_test_utils.h  switch_test_utils.h  test_utils.h
nv-attestation-sdk-cpp/unit-tests/rego_engine/: regorus_rego_engine_test.cpp
nv-attestation-sdk-cpp/unit-tests/switch/: evidence_test.cpp  verifier_test.cpp
nv-attestation-sdk-cpp/unit-tests/switch/spdm/: spdm_req_test.cpp  spdm_resp_test.cpp
nv-attestation-sdk-cpp/unit-tests/testdata/: NV_GPU_DRIVER_GH100_550.144.03.xml  evidence_hopper_590_12.json  hopperAttestationReport.txt  hopperCertChain.txt  incorrect_cert_chain_driver_rim.xml  incorrect_rim_root.crt  incorrect_signature_driver_rim.xml  spdm_parsed_output.json  spdm_parsed_output.txt  spdm_req_parsed_output.json  switchVBIOSRim_NV_SWITCH_BIOS_5612_0002_890_9610550001.xml  switch_spdm_parsed_output.json  switch_spdm_parsed_output.txt  switch_spdm_req_parsed_output.json
nv-attestation-sdk-cpp/unit-tests/testdata/sample_attestation_data/: get_claims_nras.py  hopperClaimsv3_decoded.json  hopperClaimsv3_detached_eat.json  switch_decoded.json  switch_detached_eat.json
nv-attestation-sdk-cpp/unit-tests/testdata/sample_rims/: NV_GPU_DRIVER_GH100_535.86.09_measurement_mismatch.xml  NV_GPU_DRIVER_GH100_570.124.03_expired.xml  (+3 more)
nv-attestation-sdk-rust/: Cargo.toml  README.md
nv-attestation-sdk-rust/nv-attestation-sdk/: Cargo.toml
nv-attestation-sdk-rust/nv-attestation-sdk-sys/: Cargo.toml  build.rs
nv-attestation-sdk-rust/nv-attestation-sdk-sys/src/: lib.rs
nv-attestation-sdk-rust/nv-attestation-sdk/examples/: basic_local_attestation.rs  basic_remote_attestation.rs  evidence_collection_local_attestation.rs  evidence_collection_remote_attestation.rs  logging_example.rs
nv-attestation-sdk-rust/nv-attestation-sdk/src/: attestation.rs  error.rs  lib.rs  tests.rs  types.rs
(+26 files in other folders)
